--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="viewport"/>
     <!-- <meta name="theme-color" content="#000000" /> -->
     <meta
-      name="description"
-      content="Web site created using create-react-app"
-      
+            name="description"
+            content="Web site created using create-react-app"
+
     />
     <style>
-      html{
-        background:linear-gradient(111.60940498641457deg, rgba(255, 236, 210,0.5) 24.884114583333336%,rgba(252, 184, 162,0.5) 97.33203124999999%);
-        
-      }
+        html {
+            background: linear-gradient(111.60940498641457deg, rgba(255, 236, 210, 0.5) 24.884114583333336%, rgba(252, 184, 162, 0.5) 97.33203124999999%);
+
+        }
     </style>
     <link rel="stylesheet" href="./index.css"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,18 +33,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>집밖상황</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</head>
+<body>
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
