--- a/server/frontend/public/index.html
+++ b/server/frontend/public/index.html
@@ -12,8 +12,11 @@
     />
     <style>
         html {
-            background: linear-gradient(111.60940498641457deg, rgba(255, 236, 210, 0.5) 24.884114583333336%, rgba(252, 184, 162, 0.5) 97.33203124999999%);
-
+          background: linear-gradient(111.60940498641457deg, rgba(255, 236, 210, 0.5) 24.884114583333336%, rgba(252, 184, 162, 0.5) 97.33203124999999%) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
         }
     </style>
     <link rel="stylesheet" href="./index.css"/>
