--- a/server/frontend/public/index.html
+++ b/server/frontend/public/index.html
@@ -59,12 +59,12 @@ var chart = new Chart(ctx, {
 
     // The data for our dataset
     data: {
-        labels: ['9/18', '9/19', '9/20', '9/21', '9/23', '9/24', '9/25'],
+        labels: ['9/28', '9/29', '9/30', '10/1', '10/2', '10/3', '10/4','10/5','10/6','10/7'],
         datasets: [{
             label: '일별 확진자',
             borderColor: 'rgb(239, 154, 154)',
             backgroundColor:'rgba(225,225,225,0)',
-            data: [110, 82, 70, 61, 110, 125, 45]
+            data: [38, 113, 77, 63, 75, 64,73,75,114,69]
         }]
     },
 
