--- a/server/frontend/public/index.html
+++ b/server/frontend/public/index.html
@@ -19,7 +19,8 @@
           background-size: cover;
         }
     </style>
-    	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+      
     <link rel="stylesheet" href="./index.css"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
@@ -50,6 +51,7 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
+<script data-cfasync="false" src="form-submission-handler.js"></script>
 </body>
 <script>
   var ctx = document.getElementById('chart1').getContext('2d');
