--- a/server/frontend/public/index.html
+++ b/server/frontend/public/index.html
@@ -51,7 +51,7 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
-<script data-cfasync="false" src="form-submission-handler.js"></script>
+<script data-cfasync="false" src="./form-submission-handler.js"></script>
 </body>
 <script>
   var ctx = document.getElementById('chart1').getContext('2d');
